# DSLegno

./: .env  .gitignore  .justfile  Cargo.toml  Dioxus.toml  README.md  ROADMAP.txt  acquista.sh  com.fabrizio.fattura-watchers.plist  diesel.toml  fattura-watchers.sh  generator.sh  install.sh  launch.command  package-lock.json  random_generator.sh  update.command  vendita.sh
.github/actions/setup/: action.yml
.github/workflows/: check-release.yml  checks.yml  release.yml
command/: com.fabrizio.fattura-watchers.plist  fattura-watchers.sh  generator.sh  install.sh  launch.command  update.command
migrations/2025-01-06-134104_fatture/: down.sql  up.sql
migrations/2025-06-08-090747_fatture_3_table_update/: up.sql
migrations/2025-06-09-181818_fatture_1_table_declare/: down.sql  up.sql
migrations/2025-06-09-181907_fatture_2_table_insert/: down.sql  up.sql
migrations/2025-06-09-181919_fatture_3_table_update/: up.sql
migrations/2025-06-18-155326_tabella_architettura/: down.sql  up.sql
migrations/2025-06-18-155625_funzionalita_pefc/: down.sql  up.sql
migrations/2025-06-30-184013_ricostruire_vecchi/: down.sql  up.sql
sql/: sqlite_prototype.sql
src/: custom.rs  ds_legno.rs  main.rs  schema.rs  utils.rs
src/custom/: anagrafica.rs  dati_anagrafica.rs  dati_beni_servizi.rs  dati_generale.rs  dati_pagamento.rs  dati_riepilogo.rs  dettaglio_linee.rs  dettaglio_pagamento.rs  fattura.rs  fattura_body.rs  fattura_header.rs  invoice.rs  log_flag.rs  participant.rs  schema.rs  sede.rs  tag.rs
src/custom/fattura/: anagrafica.rs  dati_anagrafica.rs  dati_beni_servizi.rs  dati_generale.rs  dati_pagamento.rs  dati_riepilogo.rs  dettaglio_linee.rs  dettaglio_pagamento.rs  fattura_body.rs  fattura_header.rs  id_fiscale.rs  iscrizione_rea.rs  participant.rs  sede.rs
src/utils/: error.rs  help.rs  sql.rs  xml_parser.rs
tools/: package_release_linux.sh  package_release_windows.sh
