[package]
name = "ds-legno"
version = "0.1.0"
authors = [
  "Daniel Rivas <danielrivasmd@gmail.com>"
]
repository = "https://github.com/DanielRivasMD/DSLegno"
keywords = []
categories = []
licencse = "GLPv3"
readme = "README.md"
description = "Administration handler for Dalla Santa Legno"
edition = "2021"


[[bin]]
name = "fattura"
path = "src/bin/fattura.rs"


[lib]
name = "ds_legno"
path = "src/ds_legno.rs"


[dependencies]
anyhow = "1.0.89"
async-recursion = "1.1.1"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.4.3", features = ["derive"] }
colored = "2.1.0"
derive-new = "0.7.0"

diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
# build libsqlite3 as part of the build process
# uncomment this line if you run into setup issues
# libsqlite3-sys = { version = "0.30", features = ["bundled"] }
dotenvy = "0.15"

# diesel = { version = "2.2.4", features = ["sqlite"] }

dioxus = { version = "0.5", features = ["desktop", "router"] }

# Debug
dioxus-logger = "0.5.1"
futures = "0.3.30"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
xml = "0.8.20"


[profile.dev]
opt-level        = 0
debug            = true
rpath            = false
lto              = false
debug-assertions = true
codegen-units    = 1


[profile.release]
strip            = true
opt-level        = 3
debug            = false
rpath            = false
lto              = true
debug-assertions = false
codegen-units    = 1


[profile.test]
opt-level        = 3
debug            = false
rpath            = false
lto              = false
debug-assertions = false
codegen-units    = 1

