[package]
name = "ds-legno"
version = "2.3.0"
author = [
  "Daniel Rivas <danielrivasmd@gmail.com>",
  "Chiara Dalla Santa <chiara.dallasanta@gmail.com>",
]
repository = "https://github.com/DanielRivasMD/DSLegno"
keywords = []
categories = []
licencse = "GLPv3"
readme = "README.md"
description = "Administration handler for Dalla Santa Legno"
edition = "2021"


[[bin]]
name = "fattura"
path = "src/bin/fattura.rs"


[lib]
name = "ds_legno"
path = "src/ds_legno.rs"


[dependencies]
anyhow = "1.0.89"
async-recursion = "1.1.1"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.4.3", features = ["derive"] }
colored = "2.1.0"
derive-new = "0.7.0"
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15"
thiserror = "1.0.64"
xml = "0.8.20"


[profile.dev]
opt-level        = 0
debug            = true
rpath            = false
lto              = false
debug-assertions = true
codegen-units    = 1


[profile.release]
strip            = true
opt-level        = 3
debug            = false
rpath            = false
lto              = true
debug-assertions = false
codegen-units    = 1


[profile.test]
opt-level        = 3
debug            = false
rpath            = false
lto              = false
debug-assertions = false
codegen-units    = 1
